k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: laliga
  labels:
    app: backend
    app.kubernetes.io/name: backend-service
    app.kubernetes.io/part-of: laliga-hub
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
