k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: laliga
  labels:
    app: frontend
    app.kubernetes.io/name: frontend-service
    app.kubernetes.io/part-of: laliga-hub
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
